--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ nav{
 }
 
 .this{
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 .logo{
     color: yellow;
+    font-size: 1.3rem;
 }
 
 .button {
@@ -62,14 +63,14 @@ nav{
 
 .content {
     width: 100%;
-    background: rgb(24, 24, 24);
-    min-height: 70vh;
+    background: rgb(56, 56, 56);
+    min-height: 130vh;
     z-index: 2;
     position: absolute;
 }
 
 .content img {
-    max-width: 35rem;
+    max-width: 25rem;
     padding: 2rem;
 }
 
@@ -77,7 +78,7 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 60vh;
+    min-height: 50vh;
     text-align: center;
 }
 
@@ -86,10 +87,15 @@ nav{
 }
 
 .text {
+    text-align: center;
     padding: 2rem 20rem;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
+    margin-top: 1rem;
 }
 
-.top {
-    margin-top: 3.5rem;
+
+@media screen and (max-width: 1300px) {
+    .content-imgs{
+        flex-direction:column;
+    }
 }
